update image extension

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h1 class="home__title">Hi<span class="wave">👋</span>,<br>I'm <span class="home__title-color">Temitope Akinmegha</span><br>
                     <span class="type"></span><br> based in Lagos, Nigeria</br>
                 </h1>
-                <p>I build exceptional digital software products using premium technologies 🚀</p>
+                <p>I build exceptional software products using premium technologies 🚀</p>
                 <a href="#contact" class="bttn">Hire me <i class="fas fa-laptop-code"></i></a>
             </div>
 
@@ -82,7 +82,7 @@
             <h2 class="section-title">About</h2>
          <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="assets/img/temi.png"  alt="temi" caption="T'megha">
+                    <img src="assets/img/temi.svg"  alt="temi" caption="Temitope">
                 </div>
 
                 <div>
@@ -109,29 +109,27 @@
 
         <!--===== SKILLS =====-->
         <section class="skills section" id="skills">
-            <h2 class="section-title">My Tech Stack</h2>
-            <div class="skills__container bd-grid">
+            <h2 class="section-title">Tech</h2>
+            <div class="skills__container">
                 <div class="stack">
-                    <img src="assets/img/html5.png" alt="html" class="skills__img" width= "90" height="90">
-                    <img src="assets/img/css3.png" alt="css3" class="skills__img" width="70" height="70" >
-                    <img src=" assets/img/js.png" alt="javascript" class="skills__img" width="70" height="70" >
-                    <img src=" assets/img/node.png" alt="node" class="skills__img" width="80" height="80" >
-                    <img src=" assets/img/react.png" alt="react" class="skills__img" width="70" height="70" >
-                    <img src=" assets/img/typescript.png" alt="typescript" class="skills__img" width="70">
-                    <img src=" assets/img/python.png" alt="python" class="skills__img" width="90" height="90" >
-                    <img src=" assets/img/flutter.png" alt="flutter" class="skills__img" width="90" height="90" >
-                    <img src=" assets/img/git.png" alt="git" class="skills__img" width="55" height="55" style="margin-left: 15px;">
-                    <img src=" assets/img/firebase.png" alt="firebase" class="skills__img" width="55" height="55">
-                    <img src=" assets/img/mysql.png" alt="mysql" class="skills__img" width="100" height="100" style="margin-top: -30px; margin-left: -10px;">
-                    <img src=" assets/img/angular.png" alt="mysql" class="skills__img" width="55" height="55" style="margin-top: -5px; margin-left: 20px;" >
-                  
-
+                    <img src="assets/img/html5.svg" alt="html" class="skills__img">
+                    <img src="assets/img/css3.svg" alt="css3" class="skills__img">
+                    <img src=" assets/img/js.svg" alt="javascript" class="skills__img" >
+                    <img src=" assets/img/node.svg" alt="node" class="skills__img">
+                    <img src=" assets/img/react.svg" alt="react" class="skills__img">
+                    <img src=" assets/img/typescript.svg" alt="typescript" class="skills__img">
+                    <img src=" assets/img/python.svg" alt="python" class="skills__img">
+                    <img src=" assets/img/flutter.svg" alt="flutter" class="skills__img">
+                    <img src=" assets/img/git.svg" alt="git" class="skills__img">
+                    <img src=" assets/img/firebase.svg" alt="firebase" class="skills__img">
+                    <img src=" assets/img/mysql.svg" alt="mysql" class="skills__img">
+                    <img src=" assets/img/angular.svg" alt="mysql" class="skills__img">     
                 </div>
                 <div class="resume__col--2">
                     <a class="button"
                         href="https://docs.google.com/document/d/1myyTw5d6o0M8kb8-HqU7BIB1g_YOZJLyJ-jTjEqe7-A/edit?usp=sharing"
                         target="_blank" rel="noopener noreferrer">
-                        Download CV
+                        Download CV <i class="fa-solid fa-cloud-arrow-down"></i>
                     </a>
                 </div>
             </div>
@@ -219,7 +217,7 @@
 
         <section class="blog bd-grid" id="blog">
             <h2 class="section-title">Blog</h2>
-            <p class="subtitle">I also get involved in writing Technical articles <i class="fas fa-hand-point-down"></i></p>
+            <p class="subtitle">I also get excited writing Technical articles <i class="fas fa-hand-point-down"></i></p>
             <div class="blog-content">
                 <p>...coming soon 😎</p>
             </div>
@@ -235,7 +233,7 @@
                             <div class="row">
                                 <i class="fas fa-user"></i>
                                 <div class="info">
-                                    <div class="sub-title">Akinmegha Temitope (T'megha)</div>
+                                    <div class="sub-title">T'megha</div>
                                 </div>
                             </div>
                             <div class="row">
@@ -287,7 +285,7 @@
             <div class="btnScrollToTop">
                 <a href="#hero"><i class="fas fa-chevron-up"></i></a>
             </div>
-        <p class="footer__title">Designed & Developed by T'megha</p>
+        <p class="footer__title">Designed & Developed by Temitope(T'megha)</p>
         <div class="footer__social">
             <a href="https://www.linkedin.com/in/akinmeghatemitope/" class="footer__icon"><i
                     class='bx bxl-linkedin'></i></a>
