--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <div>
                     <h1 class="about__subtitle">🚀 Crafting Digital Dreams into Reality</h1>
-                    <p class="first__text">Imagine a thoroughbred IT Systems Engineer with a natural gift for cracking the toughest tech problems. 
+                    <p class="first__text">Imagine a thoroughbred Software Engineer with a natural gift for cracking the toughest tech problems. 
                         That's me! I thrive on challenges, using my knack for dissecting complex issues and piecing together solutions that defy the ordinary. 
                         I am armed with an out-of-the-box thought process, I'm on a mission to turn the ordinary into the extraordinary.
                     </p><br>
