--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 
             <div class="home__social">
                 <a target="_blank" href="https://www.linkedin.com/in/akinmeghatemitope/" class="home__social-icon"><i
-                        class='bx bxl-linkedin'></i></a>
+                        class="bx bxl-linkedin" title="linkedin"></i></a>
                 <a target="_blank" href="https://twitter.com/temitopeakin" class="home__social-icon"><i
-                        class='bx bxl-twitter'></i></a>
+                        class="bx bxl-twitter" title="twitter"></i></a>
                 <a target="_blank" href="https://github.com/temitopeakin1" class="home__social-icon"><i
-                        class='bx bxl-github'></i></a>
-                <a target="_blank" href="https://profile.codersrank.io/user/temitopeakin1/" class="home__social-icon"><i
-                        class='bx bx-code-alt'></i></a>
+                        class="bx bxl-github" title="github"></i></a>
+                <a target="_blank" href="https://tmegha.hashnode.dev/" class="home__social-icon"><i
+                        class="fa-brands fa-hashnode" title="hashnode"></i></a>
                 <a href="#about" class="scroll-down">
                     Scroll down
                     <svg class="scroll-svg" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
