--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <img src=" assets/img/flutter.svg" alt="flutter" class="skills__img">
                     <img src=" assets/img/git.svg" alt="git" class="skills__img">
                     <img src=" assets/img/firebase.svg" alt="firebase" class="skills__img">
-                    <img src=" assets/img/mysql.svg" alt="mysql" class="skills__img">
+                    <img src=" assets/img/vue.svg" alt="vue" class="skills__img">
                     <img src=" assets/img/angular.svg" alt="mysql" class="skills__img">     
                 </div>
                 <div class="resume__col--2">
