--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <img src=" assets/img/git.svg" alt="git" class="skills__img">
                     <img src=" assets/img/firebase.svg" alt="firebase" class="skills__img">
                     <img src=" assets/img/vue.svg" alt="vue" class="skills__img">
-                    <img src=" assets/img/angular.svg" alt="mysql" class="skills__img">     
+                    <img src=" assets/img/angular.svg" alt="angular" class="skills__img">     
                 </div>
                 <div class="resume__col--2">
                     <a class="button"
