--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <img src=" assets/img/flutter.svg" alt="flutter" class="skills__img">
                     <img src=" assets/img/git.svg" alt="git" class="skills__img">
                     <img src=" assets/img/firebase.svg" alt="firebase" class="skills__img">
-                    <img src=" assets/img/vue.svg" alt="vue" class="skills__img">
+                    <img src=" assets/img/nestjs.svg" alt="nest" class="skills__img">
                     <img src=" assets/img/angular.svg" alt="angular" class="skills__img">     
                 </div>
                 <div class="resume__col--2">
@@ -257,7 +257,7 @@
                         </div>
                     </div>
                     <div class="right">
-                        <div class="text">Lets have a Chat about your next project</div>
+                        <div class="text">Your vision, our expertise – let's make it a reality.</div>
                         <form action="https://formsubmit.co/87bac077934aaa01fa9e9e015f3059a5" method="POST">
                             <div class="fields">
                                 <div class="field name">
@@ -274,7 +274,7 @@
                             <div class="field textarea">
                                 <textarea cols="50" rows="20" placeholder="Project Description.." required></textarea>
                             </div>
-                            <button class="button" type="submit" value="Submit">Shoot <i class="fab fa-telegram-plane"></i></button>
+                            <button class="button" type="submit" value="Submit">Send Message <i class="fab fa-telegram-plane"></i></button>
                         </form>
                     </div>
                 </div>
@@ -285,7 +285,7 @@
             <div class="btnScrollToTop">
                 <a href="#hero"><i class="fas fa-chevron-up"></i></a>
             </div>
-        <p class="footer__title">Designed & Developed by Temitope(T'megha)</p>
+        <p class="footer__title">Designed & Developed by Temitope (T'megha)</p>
         <div class="footer__social">
             <a href="https://www.linkedin.com/in/akinmeghatemitope/" class="footer__icon"><i
                     class='bx bxl-linkedin'></i></a>
