--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
                 </div>
                 
                 <div class="projects__box">
-                    <a href="#"><img class="projects__image" src="assets/img/portfolio.png" alt="T'megha Portfolio"></a>
+                    <a href="#"><img class="projects__image" src="assets/img/portfolio.svg" alt="T'megha Portfolio"></a>
                     <h3 class="projects__name">T'megha</h3>
                     <p class="projects__description">My Portfolio Website V1</p>
                     <a href="#" class="projects__link">
                         Explore Project </a> <a href="https://github.com/temitopeakin1/Portfolio" target= _blank><i class="fa-brands fa-github"></i></a>
-                    <div class="tools">Html5 | Css3 | Javascript </div>
+                    <div class="tools">Html5 | Css3 | JavaScript </div>
                 </div>
              </div>
             <div class="projects__btn">
