tooltip I stack update

--- a/index.html
+++ b/index.html
@@ -112,18 +112,18 @@
             <h2 class="section-title">Tech</h2>
             <div class="skills__container">
                 <div class="stack">
-                    <img src="assets/img/html5.svg" alt="html" class="skills__img">
-                    <img src="assets/img/css3.svg" alt="css3" class="skills__img">
-                    <img src=" assets/img/js.svg" alt="javascript" class="skills__img" >
-                    <img src=" assets/img/node.svg" alt="node" class="skills__img">
-                    <img src=" assets/img/react.svg" alt="react" class="skills__img">
-                    <img src=" assets/img/typescript.svg" alt="typescript" class="skills__img">
-                    <img src=" assets/img/python.svg" alt="python" class="skills__img">
-                    <img src=" assets/img/flutter.svg" alt="flutter" class="skills__img">
-                    <img src=" assets/img/git.svg" alt="git" class="skills__img">
-                    <img src=" assets/img/firebase.svg" alt="firebase" class="skills__img">
-                    <img src=" assets/img/nestjs.svg" alt="nest" class="skills__img">
-                    <img src=" assets/img/angular.svg" alt="angular" class="skills__img">     
+                    <img src="assets/img/html5.svg" alt="html" title="html5" class="skills__img">
+                    <img src="assets/img/css3.svg" alt="css3" title="CSS3" class="skills__img">
+                    <img src=" assets/img/js.svg" alt="javascript" title="JavaScript" class="skills__img" >
+                    <img src=" assets/img/node.svg" alt="node" title="Nodejs" class="skills__img">
+                    <img src=" assets/img/react.svg" alt="react" title="Reactjs" class="skills__img">
+                    <img src=" assets/img/typescript.svg" alt="typescript" title="TypeScript" class="skills__img">
+                    <img src=" assets/img/python.svg" alt="python" title="Python" class="skills__img">
+                    <img src=" assets/img/flutter.svg" alt="flutter" title="Flutter" class="skills__img">
+                    <img src=" assets/img/git.svg" alt="git" title="version ctrl(git)" class="skills__img">
+                    <img src=" assets/img/firebase.svg" alt="firebase" title="Firebase"  class="skills__img">
+                    <img src=" assets/img/nestjs.svg" alt="nest" title="NestJs"class="skills__img">
+                    <img src=" assets/img/angular.svg" alt="angular" title="Angular" class="skills__img">     
                 </div>
                 <div class="resume__col--2">
                     <a class="button"
