--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                 </div>
                 <div class="projects__box">
                     <a href="https://hampshire-crm.vercel.app/" target= _blank><img class="projects__image" src="assets/img/crm.png" alt="hampshire"></a>
-                    <h3 class="projects__name">CRM App</h3>
-                    <p class="projects__description">CRM Application</p> 
+                    <h3 class="projects__name">EMS App</h3>
+                    <p class="projects__description">Employee management System</p> 
                     <a href="https://hampshire-crm.vercel.app/"  target= _blank class="projects__link">
                         Explore Project </a> <a href="https://github.com/temitopeakin1/hampshire-crm" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">Reactjs | supabase | syncfusion library | chartjs | Tailwind</div>
