--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <a href="https://product-mgt-application.vercel.app/" target= _blank ><img class="projects__image"  src="assets/img/product.png" alt="product"></a>
                     <h3 class="projects__name">Product Mgt App</h3>
                     <p class="projects__description">A application hub that manages different products</p> 
-                    <a href="https://productmgtapp.netlify.app/" target= _blank class="projects__link">
+                    <a href="https://product-mgt-application.vercel.app/" target= _blank class="projects__link">
                         Explore Project</a> <a href="https://github.com/temitopeakin1/product-mgt-application" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">Angular | RxJs</div>
                 </div>
