update contact: name

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             <div class="row">
                                 <i class="fas fa-user"></i>
                                 <div class="info">
-                                    <div class="sub-title">T'megha</div>
+                                    <div class="sub-title">Temitope Akinmegha</div>
                                 </div>
                             </div>
                             <div class="row">
