--- a/index.html
+++ b/index.html
@@ -157,6 +157,14 @@
                     <div class="tools">Reactjs | supabase | syncfusion library | chartjs | Tailwind</div>
                 </div>
                 <div class="projects__box">
+                    <a href="https://dashboard-pay.vercel.app/" target="_blank"><img class="projects__image" src="assets/img/dashboard.png"></a>
+                   <h3 class="projects__name">Sales Dashboard</h3>
+                    <p class="projects__description">An app to visualise and analyse sales data in real time</p>
+                    <a href="https://dashboard-pay.vercel.app/" class="projects__link" target="_blank">
+                        Explore Project  </a> <a href="https://github.com/temitopeakin1/geepay-dashboard" target= _blank><i class="fa-brands fa-github"></i></a>
+                    <div class="tools">Nextjs | Tailwind | Framer motion</div>
+                </div>
+                <div class="projects__box">
                     <a href="https://tmeghaquizcard.netlify.app/" target="_blank"><img class="projects__image" src="assets/img/quizapp.png"></a>
                    <h3 class="projects__name">Quiz App</h3>
                     <p class="projects__description">Quiz App </p>
