update project section

--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
                 </div>
                 
                 <div class="projects__box">
-                    <a href="https://www.beulahchambers.org/" target= _blank ><img class="projects__image" src="assets/img/beulah.png" alt="beulahchambers"></a>
-                    <h3 class="projects__name">Beulah Chambers</h3>
-                    <p class="projects__description">Legal Webapp</p>
-                    <a href="https://www.beulahchambers.org/" target= _blank class="projects__link">
+                    <a href="https://nzuricares.co.uk/" target= _blank ><img class="projects__image" src="assets/img/nzuri.png" alt="nzuruhealthcare"></a>
+                    <h3 class="projects__name">Nzurihealthcare</h3>
+                    <p class="projects__description">Healthcare agency App</p>
+                    <a href="https://nzuricares.co.uk/" target= _blank class="projects__link">
                         Explore Project
                     </a>
-                    <div class="tools">Html5 | Css3 | Php | JavaScript | MySql</div>
+                    <div class="tools">Nextjs | Supabase | SupabaseAuth | PostgreSQL | Tailwind</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://covid-statistics-worldwide.netlify.app/" target= _blank><img class="projects__image" src="assets/img/covid.png" alt="covid-tracker"></a>
