--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
                     <div class="tools">Nextjs | Supabase | SupabaseAuth | PostgreSQL | Tailwind</div>
                 </div>
                 <div class="projects__box">
-                    <a href="https://covid-statistics-worldwide.netlify.app/" target= _blank><img class="projects__image" src="assets/img/covid.png" alt="covid-tracker"></a>
-                    <h3 class="projects__name">Covid 19 tracker</h3>
-                    <p class="projects__description">Covid Statistics Worldwide</p>
-                    <a href="https://covid-statistics-worldwide.netlify.app/" target= _blank class="projects__link">
-                        Explore Project </a> <a href="https://github.com/temitopeakin1/worldwide-covid-statistics" target= _blank><i class="fa-brands fa-github"></i></a>
-                    <div class="tools">Reactjs | Css3 | Axios | Chartjs | Material UI </div>
+                    <a href="https://hashnode-blog-clone.vercel.app/" target= _blank><img class="projects__image" src="assets/img/hashnode.png" alt="hashnode-clone"></a>
+                    <h3 class="projects__name">Hashnode Clone App</h3>
+                    <p class="projects__description"> A blog app that seamlessly fetches all articles from your Hashnode account and presents them in a visually appealing, easy-to-navigate interface</p>
+                    <a href="https://hashnode-blog-clone.vercel.app/" target= _blank class="projects__link">
+                        Explore Project </a> <a href="" target= _blank><i class="fa-brands fa-github"></i></a>
+                    <div class="tools">Nextjs | Tailwind | Shadcn | React Query | GraphQL</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://taskschedulerapp.netlify.app/" target= _blank><img class="projects__image" src="assets/img/task.png" alt="task-scheduler"></a>
