update Task section and home

--- a/index.html
+++ b/index.html
@@ -206,14 +206,13 @@
                         Explore Project </a> <a href="https://github.com/temitopeakin1/Task-Scheduler-app" target= _blank><i class="fa-brands fa-github"></i></a>
                     <div class="tools">Reactjs</div>
                 </div>
-                
                 <div class="projects__box">
-                    <a href="#"><img class="projects__image" src="assets/img/portfolio.svg" alt="T'megha Portfolio"></a>
-                    <h3 class="projects__name">T'megha</h3>
-                    <p class="projects__description">My Portfolio Website V1</p>
-                    <a href="#" class="projects__link">
-                        Explore Project </a> <a href="https://github.com/temitopeakin1/Portfolio" target= _blank><i class="fa-brands fa-github"></i></a>
-                    <div class="tools">Html5 | Css3 | JavaScript </div>
+                    <a href="https://chat-llm-five.vercel.app/chat-interface"><img class="projects__image" src="assets/img/text-ai-assistant.png" alt="text-ai"></a>
+                    <h3 class="projects__name">LLM AI Assistant</h3>
+                    <p class="projects__description">Text-Diagram AI Assistant </p>
+                    <a href="https://chat-llm-five.vercel.app/chat-interface" class="projects__link">
+                        Explore Project </a> <a href="https://github.com/temitopeakin1/chat-LLM" target= _blank><i class="fa-brands fa-github"></i></a>
+                    <div class="tools">React | Python | Mermaidjs | LLM | Langchain | Docker </div>
                 </div>
              </div>
             <div class="projects__btn">
