--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h1 class="home__title">Hi<span class="wave">👋</span>,<br>I'm <span class="home__title-color">Temitope Akinmegha</span><br>
                     <span class="type"></span><br> based in Lagos, Nigeria</br>
                 </h1>
-                <p>I build exceptional software products using premium technologies 🚀</p>
+                <p>Creating exceptional softwares with cutting-edge technologies 🚀</p>
                 <a href="#contact" class="bttn">Hire me <i class="fas fa-laptop-code"></i></a>
             </div>
 
