update project url

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <div class="tools">Reactjs | Typescript | Axios</div>
                 </div>
                 <div class="projects__box">
-                    <a href="#"><img class="projects__image" src="assets/img/crud.png" alt="crud app"></a>
+                    <a href="https://crud-feedbackapp.netlify.app/"><img class="projects__image" src="assets/img/crud.png" alt="crud app"></a>
                     <h3 class="projects__name">Fullstack crud feedback App</h3>
                     <p class="projects__description">CRUD feedback App</p>
                     <a href="https://crud-feedbackapp.netlify.app/" class="projects__link">
