update on projects_box section tools

--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
                     <a href="https://nzuricares.co.uk/" target= _blank ><img class="projects__image" src="assets/img/nzuri.png" alt="nzuruhealthcare"></a>
                     <h3 class="projects__name">Nzurihealthcare</h3>
                     <p class="projects__description">Healthcare agency App</p>
-                    <a href="https://nzuricares.co.uk/" target= _blank class="projects__link">
+                    <a href="https://nzuricares-webapp.vercel.app/" target= _blank class="projects__link">
                         Explore Project
                     </a>
-                    <div class="tools">Nextjs | Supabase | SupabaseAuth | PostgreSQL | Tailwind</div>
+                    <div class="tools">Nextjs | Supabase | SupabaseAuth | PostgreSQL | Tailwind | LLM Chatbot</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://hashnode-blog-clone.vercel.app/" target= _blank><img class="projects__image" src="assets/img/hashnode.png" alt="hashnode-clone"></a>
