--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </div>
                 
                 <div class="projects__box">
-                    <a href="https://nzuricares.co.uk/" target= _blank ><img class="projects__image" src="assets/img/nzuri.png" alt="nzuruhealthcare"></a>
+                    <a href="https://nzuricares-webapp.vercel.app/" target= _blank ><img class="projects__image" src="assets/img/nzuri.png" alt="nzuruhealthcare"></a>
                     <h3 class="projects__name">Nzurihealthcare</h3>
                     <p class="projects__description">Healthcare agency App</p>
                     <a href="https://nzuricares-webapp.vercel.app/" target= _blank class="projects__link">
