--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <p class="projects__description"> A blog app that seamlessly fetches all articles from your Hashnode account and presents them in a visually appealing, easy-to-navigate interface</p>
                     <a href="https://hashnode-blog-clone.vercel.app/" target= _blank class="projects__link">
                         Explore Project </a> <a href="" target= _blank><i class="fa-brands fa-github"></i></a>
-                    <div class="tools">Nextjs | Tailwind | Shadcn | React Query | GraphQL</div>
+                    <div class="tools">Nextjs | TailWindCSS | Shadcn | React Query | GraphQL</div>
                 </div>
                 <div class="projects__box">
                     <a href="https://taskschedulerapp.netlify.app/" target= _blank><img class="projects__image" src="assets/img/task.png" alt="task-scheduler"></a>
